Fix z-index for pager

--- a/assets/scss/0.settings.variables.scss
+++ b/assets/scss/0.settings.variables.scss
@@ -41,6 +41,7 @@ $s-pager-shadow-hover: 18vw;
  */
 $z-modal: 1;
 $z-header: 10;
+$z-pager: 20;
 $z-menu: 100;
 
 /**
